Fixing flow-wrapper id hiding on small screens

--- a/style.css
+++ b/style.css
@@ -76,7 +76,9 @@ only screen and (max-device-width : 1100px){
 	}
 }
 @media only screen and (max-width : 580px), only screen and (max-device-width : 580px){
-	
+	#flow-wrapper {
+		visibility: hidden !important;
+	}
 	.main-content {
 		padding-top: 10%;
 		margin-left: 5% !important;
@@ -119,7 +121,7 @@ only screen and (max-device-width : 1100px){
 @media only screen and (max-width : 320px),
 only screen and (max-device-width : 320px){
 	#flow-wrapper {
-	visibility: hidden !important;
+		visibility: hidden !important;
 	}
 	.main-background {
 		opacity: 1.0 !important;
